# cppns

./: CMakeLists.txt  LICENSE  README.md  cpp-navier-stokes-steps.cpp  main.cpp  test.p
gnuplot/: gnuplotpp.h  gp_base.cc  gp_base.h  gp_components.cc  gp_components.h  gp_plot.cc  gp_plot.h  gp_subplot.h  gp_traits.h  mkgnu.h  process.c  process.h
src/: CMakeLists.txt  arrayops.cpp  arrayops.h  burgers.cpp  burgers.h  burgers2d.cpp  burgers2d.h  cavityns.cpp  cavityns.h  channelns.cpp  channelns.h  diffusion1d.cpp  diffusion1d.h  diffusion2d.cpp  diffusion2d.h  laplace2d.cpp  laplace2d.h  lin1d.cpp  lin1d.h  lin2d.cpp  lin2d.h  lin2dloop.cpp  lin2dloop.h  main.cpp  nonlin1d.cpp  nonlin1d.h  nonlin2d.cpp  nonlin2d.h  poisson2d.cpp  poisson2d.h  step1-plot.p  step10-plot.p  step11-plot.p  step2-plot.p  step3-plot.p  step5-plot.p  step9-plot.p
src/step1/: step1-plot.p
src/step4/: step4-plot.p
src/step6/: step6-plot.p
src/step8/: step8-plot.p
src/util/: CMakeLists.txt  utilities.cpp  utilities.h
src/utils/: CMakeLists.txt  mgleigen.cpp  mgleigen.h
step1/: CMakeLists.txt  lin1d.cpp  lin1d.gp  lin1d.h
step2/: CMakeLists.txt  nonlinear-1d.cpp  nonlinear-1d.h
